syntax = "proto3";

package storage.v1;

import "google/api/annotations.proto";

option go_package = "storage/api/storage/v1;v1";
option java_multiple_files = true;

// The greeting service definition.
service storage {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply)  {
        option (google.api.http) = {
            get: "/storage/{name}"
        };
    }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
